--- a/2017Test/2017Test.csproj
+++ b/2017Test/2017Test.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day1Test.cs" />
+    <Compile Include="Day2Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
