--- a/2017Test/2017Test.csproj
+++ b/2017Test/2017Test.csproj
@@ -65,6 +65,9 @@
   <ItemGroup>
     <Compile Include="Day1Test.cs" />
     <Compile Include="Day2Test.cs" />
+    <Compile Include="Day3Test.cs" />
+    <Compile Include="Day4Test.cs" />
+    <Compile Include="Day5Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
