--- a/2017Test/2017Test.csproj
+++ b/2017Test/2017Test.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Day3Test.cs" />
     <Compile Include="Day4Test.cs" />
     <Compile Include="Day5Test.cs" />
+    <Compile Include="Day6Test.cs" />
+    <Compile Include="Day7Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
