--- a/2017Test/packages.config
+++ b/2017Test/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="5.5.3" targetFramework="net452" />
+  <package id="FluentAssertions" version="6.2.0" targetFramework="net48" />
   <package id="morelinq" version="2.8.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="xunit" version="2.3.1" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net452" />
