--- a/AdventOfCodeTest/packages.config
+++ b/AdventOfCodeTest/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="5.5.3" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="6.2.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="xunit" version="2.2.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
   <package id="xunit.assert" version="2.2.0" targetFramework="net452" />
